# physics3D

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.bat  build.sh  imgui.ini
include/: collider.h  halfEdge.h  physObject.h  program.h  utils.h  wasmUtils.h  world.h
resources/shaders/: litShader.frag  litShader.vert  litShader_web.frag  litShader_web.vert
src/: collider.cpp  halfEdge.cpp  main.cpp  physObject.cpp  program.cpp  wasmUtils.js  world.cpp
